docs: content guidelines update

--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -1,77 +1,144 @@
 ---
-label:
-  Content design can make or break an online experience. Always strive for
-  writing that is clear, concise, and on-brand.
 title: Content
 description:
-  Content design can make or break an online experience. Always strive for
-  writing that is clear, concise, and on-brand.
+  Words form the conversation a user has with a product, working with the visual
+  elements and interactions to form a cohesive and tight experience.
+  Well-designed content empowers people to use our offerings with ease. These
+  content guidelines have been developed from real-life examples to ensure the
+  words in your product interfaces and documentation create the best possible
+  experience for your users.
 tabs: ['Overview', 'Guidance', 'Action labels']
 ---
 
 <PageDescription>
 
-Content design can make or break an online experience. And consistency across
-products creates a cohesive IBM user experience. Follow these content guidelines
-to ensure the content in your product UIs and documentation is clear, concise,
-and consistent.
+Well-designed content empowers people to use our offerings with ease. Words form
+the conversation a user has with a product, working with the visual elements and
+interactions to form a cohesive and tight experience.
+
+These content guidelines have been developed from real-life examples to help
+ensure the words you choose for your product interfaces create the best possible
+experience for your users.
 
 </PageDescription>
 
-## Voice and tone
+<AnchorLinks>
 
-Consistent voice and tone are crucial for connecting and resonating with users.
-What's the difference between voice and tone? One way to think about it is that
-voice is always consistent, but tone often changes depending on context.
+<AnchorLink>Introduction</AnchorLink>
+<AnchorLink>Foundations</AnchorLink>
+<AnchorLink>Voice and tone</AnchorLink>
+<AnchorLink>Conversational style</AnchorLink>
+<AnchorLink>Writing for accessibility</AnchorLink>
+<AnchorLink>Questions</AnchorLink>
+
+</AnchorLinks>
+
+## Introduction
+
+These guidelines are for everyone who is writing or reviewing copy in IBM
+product interfaces. The best UX writing happens when content designers work
+together with visual and experience designers, developers, and offering managers
+ensuring that all elements of the communication are considered and tailored to
+the goals of the user.
+
+Content experiences will vary for each use case and persona, but the basic
+guidelines for consistency and terminology hold true for all user types and
+that's what you'll find here.
+
+## Foundations
+
+Familiarity with key IBM guidance is essential to creating experiences that
+represent IBM, are consistent, and provide an interoperability of experience
+with other offerings.
+
+The Carbon content guidelines are built upon and informed by the following
+foundational IBM assets.
+
+| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                     |
+| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. It applies to all content published by IBM. |
+| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. Take the time to read this guidance so that you fully understand what drives IBM’s design philosophy and principles, and can make informed choices in your product work.     |
+| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center provides you with a home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                               |
+| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail, so that the guidance may inform your work.                                  |
+
+## Voice and tone
 
 ### Voice
 
-Voice is the foundation for communicating about IBM products and delivering
-brand messages. At IBM, our voice expresses the core of our personality, while
-bringing comfort, ease, and a sense of connection to our users. Through careful
-use of the IBM voice, we help empower users to meet their business goals.
+Voice in writing expresses the core of a company's personality. Whether spoken
+or written, one of the most important characteristics of IBM is our unique brand
+voice. Our verbal identity must remain as recognizable to everyone as our visual
+identity.
+
+Understanding IBM's personality can help you reach for the best word when making
+choices as you develop content.
+
+IBM Brand Center offers the following guidelines on voice.
+
+#### When IBM content is at its best:
+
+- It has a clear point of view.
+- It’s simple and logical.
+- It builds on solid research, data, and analysis.
+- It’s intellectually ambitious, expressing a bigger idea.
+- It’s persuasive, not poetic.
+- It’s confident, but not boastful.
+- It only ever uses figurative language for emphasis.
+- It elevates facts and outcomes.
+- It engages the thinker by speaking like the thinker.
+
+For additional guidance, please read the IBM Brand Center
+[voice guidelines](https://www.ibm.com/brand/expression#voice).
 
 ### Tone
 
-Tone conveys an attitude toward both the subject matter and the reader. All
-content – whether it's introductory text on the UI, an error message, or a topic
-in the docs – tells part of a bigger story. Good storytellers are skilled in two
-main areas: what they are saying (the substantive content) and how to say it to
-any given audience (the style and tone in which it is presented). Be a good
-storyteller.
+Tone describes how voice is expressed and it adapts to different situations. For
+example, the words chosen for error messages differ greatly from words you might
+see in an onboarding flow. The tone of error messages is economical and direct,
+and they are often written in short phrases instead of sentences. Onboarding
+flows typically take a little more time, with full sentences and friendly
+explanations.
 
-## Conversational levels
+The underlying voice in each case is consistent but with different word choices
+and a different sentence structure, the style and tone adapts.
 
-Content should never feel complex, distant, or disjointed. Rather, it should
-feel like a conversation with a smart friend – personal, relatable, helpful, and
-engaging. Do not mistake conversational style for sloppy writing! Conversational
-content still needs to be clear, concise, and easy to understand. The best
-content creates a connection with the user.
+## Conversational style
 
-Here's a quick guide to conversational levels based on the six stages of the
-user journey:
+To set the appropriate tone, it helps to imagine the user engaging with the
+product as if in a conversation. The interplay between words, images, and
+interactions forms the conversation, a back-and-forth that takes place on the
+glass, between the user and the product.
 
-### Less conversational
+The conversational level is determined by where the user is in the journey, and
+the task they are performing at that time. The most conversational content is
+usually found in the "discover, try, and buy" phases of the journey. And the
+least conversational content can be found in UI labels and error messages where
+an economy of words is desirable.
 
-#### Instructional content for how to complete a task (e.g. steps)
+IBM Style offers more guidelines on
+[conversation style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa/page/Conversational%20style).
 
-“Go to Avatar icon > Account > Notifications to set up general account and
-spending notifications. Spending notifications are available only for
-Subscription and Pay-As-You-Go account owners.”
+## Writing for accessibility
 
-### More conversational
+For detailed guidance about writing for all users, please read the
+[Content design section](https://www.ibm.com/able/toolkit/design/content/text-equivalents)
+of the IBM Accessibility site.
 
-#### Welcome pages and standard interface content for productive use, managing and upgrading, leverage and extend content, and support
+It provides detailed guidance on the following topics:
 
-“To start using IBM Cloud, name your first organization. Think of an org as a
-project or team that shares resources, such as apps, databases, and other
-services. Orgs exist in geographic regions, so decide where you'd like to put
-your first one.”
+- text alternatives for visuals or audio content
+- errors and other messages
+- labels and inputs for forms
+- guidance for providing adequate context
 
-### Most conversational
+Further guidance can be found in the
+[Web Content Accessibility](https://www.w3.org/WAI/standards-guidelines/wcag/)
+[guidelines](https://www.w3.org/TR/WCAG21/).
 
-#### Discover, Try, Buy
+## Questions
 
-“Watson Assistant comes pre-trained with industry-relevant content. It can make
-sense of your historical chat or call logs, and it has a visual dialog editor —
-meaning it's never been easier to get started (developers not required).”
+If there's something you need and cannot find, or if you need clarification
+about a particular use case, you can ask questions in the
+[Carbon Slack channel](#carbon-design-system), open a Github issue, or connect
+with us in one of our
+[meetups](https://www.carbondesignsystem.com/whats-happening/meetups).
