docs: content fixes pt 3

--- a/src/pages/data-visualization/advanced-charts/index.mdx
+++ b/src/pages/data-visualization/advanced-charts/index.mdx
@@ -39,7 +39,7 @@ correlations.
 Multiple blocks of two indicators can be placed next to each other creating a
 wider alluvial diagram but it’s crucial to consider that this specific kind of
 chart does not show correlations between indicators that are not directly
-connected. This is usually emphasized using different set of colors for each
+connected. This is usually emphasized using a different set of colors for each
 block.
 
 <Row>
@@ -93,7 +93,7 @@ requirement does not apply to heat maps.
 ![Sequential heat map](images/04_adv_heatmap_928.png)
 
 <Caption>
-  When cells get extremely small, a white border can hinder the intended affect.
+  When cells get extremely small, a white border can hinder the intended effect.
 </Caption>
 
 </Column>
@@ -131,16 +131,16 @@ neutral midpoint is often referred to as the "inflection point" (for example, a
 0 value midway between -100 and +100).
 
 [Divergent scales](../data-visualization/color-palettes#diverging-palettes)
-require 3 colors for their correspondent values (min, max and inflection point)
+require 3 colors for their correspondent values (min, max, and inflection point)
 and Carbon has provided two approved palettes for divergent visualizations.
 Although the examples here use the "discrete" (stepped scale) provided by the
-Carbon palette, divergent heat maps often leverage "continous" values
-(gradients) to accomodate situations that require more than 10 values.
+Carbon palette, divergent heat maps often leverage "continuous" values
+(gradients) to accommodate situations that require more than 10 values.
 
 #### Inflection points
 
 While min/max values can be automatically detected from data, inflection points
-can vary depending on data type. We default to zero in order to accomodate the
+can vary depending on data type. We default to zero in order to accommodate the
 most common cases and include a feature flag within the code to specify
 exceptions. The data for a divergent heat map does not need to be symmetrical on
 either side of the inflection point. For example, the data set could have a zero
@@ -220,10 +220,10 @@ between detailed and high-level views of the diagram.
 ## Parallel coordinates
 
 Parallel coordinate charts visualize individual data elements across multiple
-variables. Each of variable corresponds to a vertical axis and each data element
-is displayed as a series of connected points along the axes.
+variables. Each variable corresponds to a vertical axis and each data element is
+displayed as a series of connected points along the axes.
 
-The parallel coorinate chart is the equivalent of a radar chart with axes —
+The parallel coordinate chart is the equivalent of a radar chart with axes —
 making it preferable for many use cases. Its strength is that each variable can
 be completely different and even have its own scale (the units can even be
 different).
@@ -292,7 +292,7 @@ and subcategory via area size.
 Divergent tree maps combine Carbon's divergent color palette with the
 hierarchical structure of a tree map. Each rectangle has an area proportional to
 a specified dimension of the data, but the rectangles can also be colored
-independently accordingly to an additional indicator.
+independently according to an additional indicator.
 
 As with [heat maps](../data-visualization/advanced-charts#heat-maps), the
 diverging palette shows color progression in either direction from an inflection
@@ -354,7 +354,7 @@ in those areas.
 
 ### Proportional symbol map
 
-Symbols driven by data are overlayed in geographical regions. A bubble the
+Symbols driven by data are overlayed in geographical regions. A bubble is the
 symbol most commonly used in this instance—with the area of the circle
 proportional to its value in the dataset.
 
@@ -395,8 +395,8 @@ the map, causing the map to become distorted in proportion to the substitute
 variable.
 
 Cartograms are useful for visualizing populations through different lenses — for
-instance, ethnicities, polictical parties or religious affliliation.   Carbon
-does not have a coded component for cartograms but online generators like
+instance, ethnicities, political parties, or religious affiliation. Carbon does
+not have a coded component for cartograms but online generators like
 [go-cart.io](https://go-cart.io/) allow you to upload your own data sets and
 download an .svg file.
 
@@ -448,7 +448,7 @@ points.
 These styles can be used as is, or as a backdrop for other geospatial data sets.
 For more complex data sets that require the full breadth of the Carbon charts
 palette, we suggest using either the White or the Gray 100 style for the most
-accessibile results.
+accessible results.
 
 <Row>
 <Column  colLg={12} colMd={8} colSm={4} >
