--- a/src/pages/data-visualization/axes-and-labels/index.mdx
+++ b/src/pages/data-visualization/axes-and-labels/index.mdx
@@ -36,8 +36,8 @@ the following recommendation.
 
 #### When starting at non-zero is bad
 
-Always start numerical axis at zero for part-to-whole and comparisons charts,
-such as bar and area chart. Truncating the Y axis can distortion the perception,
+Always start numerical axes at zero for part-to-whole and comparisons charts,
+such as bar and area chart. Truncating the Y axis can distort the perception,
 making a small difference look big and significant.
 
 <DoDontRow>
@@ -56,9 +56,9 @@ making a small difference look big and significant.
 #### When starting at non-zero is good
 
 Line charts and scatter plots are less sensitive to this distortion because they
-are intended to communicate trends and not relative size of the difference. In
-these cases, cropping the Y axis helps users more easily identify the direction
-of change.
+are intended to communicate trends and not the relative size of the difference.
+In these cases, cropping the Y axis helps users more easily identify the
+direction of change.
 
 <Row>
 <Column  colLg={8} colMd={4} colSm={4}>
@@ -107,7 +107,7 @@ stroke and hide circles representing data points.
 </Column>
 </Row>
 
-If data isn’t available between axis break points, leave the area empty.
+If data isn’t available between axis breakpoints, leave the area empty.
 
 <Row>
 <Column  colLg={8} colMd={4} colSm={4}>
@@ -121,7 +121,7 @@ If data isn’t available between axis break points, leave the area empty.
 
 #### Consistent increments
 
-Never change axis ticks increments to accomodate data availability. If any form
+Never change axis ticks increments to accommodate data availability. If any form
 of axis compression is required, use the provided
 [axis break styling](#breaks-in-axes) to visually denote the compression.
 
