--- a/src/pages/data-visualization/dashboards/index.mdx
+++ b/src/pages/data-visualization/dashboards/index.mdx
@@ -51,7 +51,7 @@ from interpreting the information.
 
 #### Use consistent color assignments
 
-Always use consistent colors for the each data set within a dashboard.
+Always use consistent colors for each data set within a dashboard.
 
 #### Use white space to enhance clarity
 
@@ -79,8 +79,8 @@ hours and reviews.
 
 #### Consistency is key
 
-All charts should use the same layout and spacing, and have legends at the same
-position relative to charting area. Do not switch measurement systems, like
+All charts should use the same layout and spacing, and have legends in the same
+position relative to the charting area. Do not switch measurement systems, like
 imperial to metric.
 
 #### Linked charts
