--- a/src/pages/data-visualization/legends/index.mdx
+++ b/src/pages/data-visualization/legends/index.mdx
@@ -95,7 +95,7 @@ the page’s layout and context, you may choose to position the legends at the
 #### Bottom (default) and top
 
 Position the legend at the bottom or top of a chart in situations where space is
-a scarce, such as a dashboard.
+scarce, such as a dashboard.
 
 <Row>
 <Column  colLg={6} colMd={4} colSm={4}>
@@ -130,8 +130,9 @@ clustered.
 
 #### Right
 
-Position the legend to the right of the chart when space is plentiful, or when you would like to provide the maximum context. In mobile, the legend could revert to a stack.
-
+Position the legend to the right of the chart when space is plentiful, or when
+you would like to provide the maximum context. In mobile, the legend could
+revert to a stack.
 
 <Row>
 <Column  colLg={8} colMd={6} colSm={4}>
@@ -152,11 +153,12 @@ Position the legend to the right of the chart when space is plentiful, or when y
 In geospatial charts, legends can be overlayed on top of a graph frame as long
 as the legend has a background opacity of 80% of the chart’s background color.
 Since geospatial charts can vary drastically in appearance, the legend can be
-placed in either side of the chart, top- or bottom-aligned, whatever best
-accomodates the content.
+placed on either side of the chart, top- or bottom-aligned, whatever best
+accommodates the content.
 
-To demonstrate the legend’s background opacity, we chose to place the legend at the top left in the chart below. See the Master data visulization design file for more detail about geospatial legends.
-
+To demonstrate the legend’s background opacity, we chose to place the legend at
+the top left in the chart below. See the Master data visualization design file
+for more detail about geospatial legends.
 
 <Row>
 <Column  colLg={12} colMd={6} colSm={4}>
