--- a/src/pages/data-visualization/chart-anatomy/index.mdx
+++ b/src/pages/data-visualization/chart-anatomy/index.mdx
@@ -62,12 +62,12 @@ navigation tools like a zoom bar and tooltip.
 </Column>
 </Row>
 
-#### Titles, labels and legends
+#### Titles, labels, and legends
 
 The title of a piece of visualization should be descriptive and qualitative. It
 should also reflect the main insight the data reveals. The legend should explain
 the chart’s meaning by defining the association of each visual property, such as
-color, shape and size, to the corresponding data. When possible, use labels
+color, shape, and size, to the corresponding data. When possible, use labels
 directly on the chart to avoid long legends. All the text should be concise and
 easy to understand. [Read more on legend usage.](../data-visualization/legends)
 
@@ -79,7 +79,7 @@ on hover to reveal more detailed information or context for specific chart
 elements. A tooltip should repeat the corresponding values of the data point on
 both axes and any other relevant details.
 
-#### Graph frames, axes and ticks
+#### Graph frames, axes, and ticks
 
 The graph frame is the area where the data will be visualized as graphics or
 numbers. Axes, ticks, and the grid should help the reader understand the
@@ -119,8 +119,13 @@ include radar and solar charts.
 
 #### Labels
 
-In a circular chart, labels offer the percentage value of the whole for an individual category. When the graphic translation of the data is less than 3 degrees, a callout is used to clearly associate the label with the slice. If the data translates as less than 1 degree, a slice will not be rendered on the chart, the data would not be keyboard accessible or available in a tooltip either. The only way to see the data in this scenario would be via a data table, a feature that we'd like to implement for all charts to enhance accessibility.
-
+In a circular chart, labels offer the percentage value of the whole for an
+individual category. When the graphic translation of the data is less than 3
+degrees, a callout is used to clearly associate the label with the slice. If the
+data translates as less than 1 degree, a slice will not be rendered on the
+chart, the data would not be keyboard accessible or available in a tooltip
+either. The only way to see the data in this scenario would be via a data table,
+a feature that we'd like to implement for all charts to enhance accessibility.
 
 #### Big number or KPI
 
