swap input text error png for gif

--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -144,7 +144,7 @@ the user is filling out forms. For full guidelines, refer to the
 <Row>
 <Column colLg={8}>
 
-![Validation text example](images/text-input-usage-2.png)
+![Validation text example](images/text-input-usage-2.gif)
 
 </Column>
 </Row>
