swap pattern form error text png to gif

--- a/src/pages/patterns/forms-pattern/index.mdx
+++ b/src/pages/patterns/forms-pattern/index.mdx
@@ -490,7 +490,7 @@ Common user errors include:
 <Row>
 <Column colLg={8}>
 
-![Example of client-side error message](/images/Inline_error_message.png)
+![Example of client-side error message](/images/inline-error-message.gif)
 
 </Column>
 </Row>
