--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -44,8 +44,8 @@ functionality—dropdown, multiselect, and combo box.
 | Type                        | Purpose                                                                                                  |
 | --------------------------- | -------------------------------------------------------------------------------------------------------- |
 | [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                                        |
-| [Multiselect](#multiselect)| Allows the user to select multiple options from a list and filter.                                       |
-| [Combo box](#combo-box)      | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
+| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                                       |
+| [Combo box](#combo-box)     | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
 
 #### When to use
 
@@ -662,7 +662,7 @@ usage page.
 <Row>
 <Column colLg={8}>
 
-![Dropdown invalid state.](images/dropdown-usage-14.png)
+![Dropdown invalid state.](images/dropdown-usage-14.gif)
 
 </Column>
 </Row>
