chore(docs): update style tabs with new token usage

--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -24,6 +24,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--accordion__title:focus`    | border     | `$focus`       |
 | `.bx--accordion__title:disabled` | background | `$disabled-02` |
 | `.bx--accordion__arrow:disabled` | fill       | `$disabled-02` |
+| `.bx--accordion__item--disabled` | border-top | `$disabled-01` |
 
 <Row>
 <Column colLg={12}>
