--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -12,9 +12,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ------------------------- | ---------------- | ------------- |
 | `.bx--label`              | text color       | `$text-02`    |
 | `.bx--checkbox-label`     | text color       | `$text-01`    |
-| `.bx--checkbox`           | border           | `$ui-05`      |
+| `.bx--checkbox`           | border           | `$icon-01`    |
 | `.bx--checkbox:unchecked` | background-color | transparent   |
-| `.bx--checkbox:checked`   | background-color | `$ui-05`      |
+| `.bx--checkbox:checked`   | background-color | `$icon-01`    |
 | `.bx--checkbox:checked`   | checkmark        | `$inverse-01` |
 
 <Row>
