--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -18,7 +18,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:hover`            | background-color | `$hover-primary`  |
 | `:active`           | background-color | `$active-primary` |
 | `:focus`            | border           | `$focus`          |
-| `:focus`            | inset            | `$inverse-01`     |
+| `:focus`            | inset            | `$ui-background`  |
 | `:disabled`         | background-color | `$disabled-02`    |
 | `:disabled`         | text color       | `$disabled-03`    |
 | `:disabled`         | svg              | `$disabled-03`    |
@@ -42,7 +42,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:hover`              | background-color | `$hover-secondary`  |
 | `:active`             | background-color | `$active-secondary` |
 | `:focus`              | border           | `$focus`            |
-| `:focus`              | inset            | `$inverse-01`       |
+| `:focus`              | inset            | `$ui-background`    |
 | `:disabled`           | background-color | `$disabled-02`      |
 | `:disabled`           | text color       | `$disabled-03`      |
 | `:disabled`           | svg              | `$disabled-03`      |
@@ -69,7 +69,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:active`            | background-color | `$active-tertiary` |
 | `:focus`             | background-color | `$interactive-03`  |
 | `:focus`             | border           | `$focus`           |
-| `:focus`             | inset            | `$inverse-01`      |
+| `:focus`             | inset            | `$ui-background`   |
 | `:disabled`          | background       | `transparent`      |
 | `:disabled`          | border           | `$disabled-02`     |
 | `:disabled`          | text color       | `$disabled-02`     |
@@ -116,7 +116,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:hover`                    | background-color | `$hover-danger`  |
 | `:active`                   | background-color | `$active-danger` |
 | `:focus`                    | border           | `$focus`         |
-| `:focus`                    | inset            | `$inverse-01`    |
+| `:focus`                    | inset            | `$ui-background` |
 | `:disabled`                 | background-color | `$disabled-02`   |
 | `:disabled`                 | text color       | `$disabled-03`   |
 | `:disabled`                 | svg              | `$disabled-03`   |
